--- a/views/menu_item.xml
+++ b/views/menu_item.xml
@@ -1,22 +1,24 @@
 <odoo>
     <data>
-        <menuitem id="travel_menu" name="Smart Travel"
-                  groups="smart_travel_agency.branch_group,smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group"
-                  web_icon="smart_travel_agency,static/description/icon.png"/>
+
         <menuitem id="travel_policy_view_menu2" name="Travel Policy"
-                  web_icon="smart_travel_agency,static/description/travel.jpeg"/>
-         <menuitem id="travel_policy_view" name="Travel Policy"
-                parent="travel_policy_view_menu2"  />
+                  web_icon="smart_travel_agency,static/description/travel.jpeg"
+                  groups="smart_travel_agency.branch_group,smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group"
+        />
+        <menuitem id="travel_policy_view" name="Travel Policy"
+                  parent="travel_policy_view_menu2"
+                  groups="smart_travel_agency.branch_group,smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group"
+        />
         <menuitem id="travel_policy_view_menu" name="Travel Policy" parent="travel_policy_view"
                   action="travel_policy_action" sequence="0"/>
         <menuitem id="insured_traveler_view_menu" name="Insured Travelers" parent="travel_policy_view"
-                  action="insured_traveler_action" sequence="1"/>
+                  action="insured_traveler_action" sequence="1" groups="smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group"/>
         <menuitem id="insured_trips_view_menu" name="Insured Trips" parent="travel_policy_view"
-                  action="insured_trips_action" sequence="2"/>
+                  action="insured_trips_action" sequence="2" groups="smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group"/>
         <menuitem id="billing_view_menu" name="Billing" parent="travel_policy_view"
-                  action="billing_action" sequence="3"/>
+                  action="billing_action" sequence="3" groups="smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group"/>
         <menuitem id="comm_view_menu" name="Agent Commission" parent="travel_policy_view"
-                  action="comm_action" sequence="4"/>
+                  action="comm_action" sequence="4" groups="smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group"/>
         <menuitem id="settle_view_menu" name="Settlements" parent="travel_policy_view"
                   action="agency_settle_action" sequence="5" groups="smart_travel_agency.agency_group"/>
 
@@ -33,9 +35,9 @@
 
         <menuitem id="price_menu" name="Price Table" parent="configuration_view_menu2"
                   action="price_action" sequence="2"/>
-         <menuitem id="price_menu_family" name="Family Package" parent="configuration_view_menu2"
+        <menuitem id="price_menu_family" name="Family Package" parent="configuration_view_menu2"
                   action="price_action_family" sequence="3"/>
-         <menuitem id="group_menu" name="Group Discount" parent="configuration_view_menu2"
+        <menuitem id="group_menu" name="Group Discount" parent="configuration_view_menu2"
                   action="group_action" sequence="4"/>
 
 
@@ -46,8 +48,8 @@
                   action="agency_branch_action" sequence="6"/>
         <menuitem id="certificate_booklet_view_menu" name="Certificate Booklet" parent="configuration_view_menu2"
                   action="certificate_booklet_action" sequence="7"/>
-<!--        <menuitem id="available_serial_view_menu" name="Available Serial Numbers" parent="configuration_view_menu2"-->
-<!--                  action="serial_action" sequence="8"/>-->
+        <!--        <menuitem id="available_serial_view_menu" name="Available Serial Numbers" parent="configuration_view_menu2"-->
+        <!--                  action="serial_action" sequence="8"/>-->
         <menuitem id="travel_commission_view_menu" name="Travel Commission" parent="configuration_view_menu2"
                   action="travel_commission_action" sequence="9"/>
         <menuitem id="travel_user" name="Users" parent="configuration_view_menu2"
