--- a/views/travel_policy.xml
+++ b/views/travel_policy.xml
@@ -233,7 +233,7 @@
         <field name="name">Policy Cancel</field>
         <field name="res_model">travel.front</field>
         <field name="view_mode">form</field>
-<!--        <field name="view_id" ref="import_image_view_form"/>-->
+        <!--        <field name="view_id" ref="import_image_view_form"/>-->
         <field name="target">new</field>
         <field name="binding_model_id" ref="smart_travel_agency.model_policy_travel" />
     </record>
@@ -374,5 +374,14 @@
             <link rel="stylesheet" href="/smart_travel_agency/static/src/css/travel.css"/>
         </xpath>
     </template>
+
+    <record id="sequence_orders" model="ir.sequence">
+        <field name="name">Order</field>
+        <field name="code">order</field>
+        <field name="prefix">ORDER</field>
+        <field name="padding">6</field>
+        <field name="number_next">1</field>
+        <field name="number_increment">1</field>
+    </record>
 
 </odoo>
