--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -119,7 +119,7 @@
                                             </tr>
                                             <tr>
                                                 <th scope="col">Issue Date</th>
-                                                <td><t t-esc="o.issue_date.strftime('%d/%m/%Y')"/></td>
+                                                <td><t t-esc="o.issue_date" t-field-options='{"format": "MM dd y h:mm"}'/></td>
                                             </tr>
                                         
                                     </table>
@@ -131,8 +131,8 @@
                                     <table class="table table-hover">
 
                                         <tr>
-                                            <th style="width:50% !important;" scope="col">From</th>
-                                            <td><t t-esc="o.coverage_from.strftime('%d/%m/%Y')"/></td>
+                                            <th style="width:25% !important;" scope="col">From</th>
+                                            <td><t t-esc="o.coverage_from.strftime('%d-%m-%Y')"/></td>
                                         </tr>
                                     </table>
                                 </div>
@@ -140,8 +140,10 @@
                                     <table class="table table-hover">
 
                                         <tr>
-                                            <th style="width:50% !important;" scope="col">To</th>
-                                            <td><t t-esc="o.coverage_to.strftime('%d/%m/%Y')"  /></td>
+                                            <th style="width:25% !important;" scope="col">To</th>
+                                            <td>
+                                                <t t-esc="o.coverage_to.strftime('%d-%m-%Y')"  />
+                                            </td>
 
                                         </tr>
                                     </table>
@@ -179,7 +181,7 @@
                                         <table class="table table-hover">
                                             <tr>
                                                 <th style=" color: #073e89; border: none !important;" scope="col">Gross Premium</th>
-                                                <td style="border: none !important; justify-content: right !important; text-align: right !important; float: right !important; margin-left -2px !important;"><t t-esc="round(o.gross_premium,2)" /> EGP</td>
+                                                <td style="border: none !important; justify-content: right !important; text-align: right !important; float: right !important; margin-left -2px !important;"><span style="display:inline;">EGP </span><t style="display:inline;" t-esc="round(o.gross_premium,2)" /></td>
                                             </tr>
 <!--                                        <tr>-->
 <!--                                            <th style="color: #073e89;border: none !important;">Policy Premiums</th>-->
@@ -294,22 +296,38 @@
                                     <table class="table table-hover">
                                         <thead>
                                             <tr>
-                                                <th style="border: none !important;" scope="col">Cover</th>
-                                                <th style="border: none !important;" scope="col">Limit</th>
+                                                <th style="border: none !important; font-weight:bolder !important; font-size:13px !important;" scope="col">Cover</th>
+                                                <th style="border: none !important; font-weight:bolder !important; font-size:13px !important;" scope="col">Limit</th>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             <t t-foreach="o.get_benefits() " t-as="ben">
+                                                <tr>
+                                                    <t t-if="o.package == 'individual'">
+                                                        <td style="font-size: 12px !important;"><t t-esc="ben.cover" /></td>
+                                                        <td style="font-size: 12px !important;"><t t-esc="ben.limit" /></td>
+                                                    </t>
+                                                    <t t-if="o.package == 'family'">
+                                                        <td style="font-size: 9px !important;"><t t-esc="ben.cover" /></td>
+                                                        <td style="font-size: 9px !important;"><t t-esc="ben.limit" /></td>
+                                                    </t>
+                                                </tr>
+                                            </t>
                                             <tr>
-                                                <t t-if="o.package == 'individual'">
-                                                    <td style="font-size: 12px !important;"><t t-esc="ben.cover" /></td>
-                                                    <td style="font-size: 12px !important;"><t t-esc="ben.limit" /></td>
-                                                </t>
-                                                <t t-if="o.package == 'family'">
-                                                    <td style="font-size: 9px !important;"><t t-esc="ben.cover" /></td>
-                                                    <td style="font-size: 9px !important;"><t t-esc="ben.limit" /></td>
-                                                </t>
+                                                <td style="border: none !important; font-weight:bolder !important; font-size:13px !important; color: #073e89;">Special Covers</td>
+                                                <td></td>
                                             </tr>
+                                            <t t-foreach="o.get_special_benefits()" t-as="sben">
+                                                <tr>
+                                                    <t t-if="o.package == 'individual'">
+                                                            <td style="font-size: 12px !important;"><t t-esc="sben.cover" /></td>
+                                                            <td style="font-size: 12px !important;"><t t-esc="sben.limit" /></td>
+                                                    </t>
+                                                    <t t-if="o.package == 'family'">
+                                                        <td style="font-size: 9px !important;"><t t-esc="sben.cover" /></td>
+                                                        <td style="font-size: 9px !important;"><t t-esc="sben.limit" /></td>
+                                                    </t>
+                                                </tr>
                                             </t>
 					                    </tbody>
                                     </table>
@@ -366,25 +384,25 @@
 
                                         <table class="table table-hover" style="border: none !important;">
                                             <t t-foreach="o.get_assistance_information() " t-as="ai">
-                                                <p style="font-size:13px; color: #073e89;border: none !important; padding-left:3px;">Contact Number (24 hours / 7 days)</p>
+                                                <span style="font-size:11px; color: #073e89;border: none !important; padding-left:3px; padding-bottom: 1px !important;">Contact Number (24 hours / 7 days)</span>
 
 <!--                                                <tr>-->
 <!--                                                    <th style="color: #073e89;border: none !important;"></th>-->
 <!--                                                    <td style="border: none !important;"></td>-->
 <!--                                                </tr>-->
-                                                <tr style="background-color:white !important">
+                                                <tr style="background-color:white !important; margin-bottom: 3px !important;">
                                                     <th style="border: none !important; font-weight: normal !important; width:25% !important;">Hotline</th>
                                                     <td style="border: none !important;"><t t-esc="ai.hot_line" /></td>
                                                 </tr>
-                                                <tr style="background-color:white !important">
+                                                <tr style="background-color:white !important; margin-bottom: 3px !important;">
                                                     <th style="border: none !important; font-weight: normal !important; width:25% !important;">WhatsApp</th>
                                                     <td style="border: none !important;"><t t-esc="ai.whats_app" /></td>
                                                 </tr>
-                                                <tr style="background-color:white !important">
+                                                <tr style="background-color:white !important; margin-bottom: 3px !important;">
                                                     <th style="border: none !important; font-weight: normal !important; width:25% !important;">Spain</th>
                                                     <td style="border: none !important;"><t t-esc="ai.spain" /></td>
                                                 </tr>
-                                                <tr style="background-color:white !important">
+                                                <tr style="background-color:white !important; margin-bottom: 3px !important;">
                                                     <th style="border: none !important; font-weight: normal !important; width:25% !important;">Fax</th>
                                                     <td style="border: none !important;"><t t-esc="ai.fax" /></td>
                                                 </tr>
@@ -392,27 +410,27 @@
                                             </t>
                                         </table>
                                     </div>
-                                    <div style="width: 25% !important; float: left; border: none !important; margin-top:30px !important;">
+                                    <div style="width: 40% !important; float: left; border: none !important; margin-top:30px !important;">
 
                                         <table class="table table-hover" style="border: none !important;">
                                             <t t-foreach="o.get_assistance_information() " t-as="ai">
 
-                                                 <tr style="background-color:white !important">
-                                                    <th style="border: none !important; font-weight: normal !important; width:30% !important;">Mobile App</th>
+                                                 <tr style="background-color:white !important; margin-bottom: 3px !important;">
+                                                    <th style="border: none !important; font-weight: normal !important; width:32% !important;">Mobile App</th>
                                                     <td style="border: none !important; "><t t-esc="ai.mobile_app" /></td>
                                                 </tr>
-                                                <tr style="background-color:white !important">
-                                                    <th style="border: none !important; font-weight: normal !important; width:30% !important;">Email</th>
+                                                <tr style="background-color:white !important; margin-bottom: 3px !important;">
+                                                    <th style="border: none !important; font-weight: normal !important; width:32% !important;">Email</th>
                                                     <td style="border: none !important; "><t t-esc="ai.email" /></td>
                                                 </tr>
-                                                <tr style="background-color:white !important">
-                                                    <th style="border: none !important; font-weight: normal !important; padding-bottom: 0px !important; width:30% !important;">FB Messenger</th>
+                                                <tr style="background-color:white !important; margin-bottom: 3px !important;">
+                                                    <th style="border: none !important; font-weight: normal !important; padding-bottom: 0px !important; width:32% !important;">FB Messenger</th>
                                                     <td style="border: none !important; padding-bottom: 0px !important;"><t t-esc="ai.fb_messenger" /></td>
                                                 </tr>
                                             </t>
                                         </table>
                                     </div>
-                                    <div style="width: 50% !important; float: right !important; border: none !important; margin-top: 17px !important;">
+                                    <div style="width: 35% !important; float: right !important; border: none !important; margin-top: 17px !important;">
                                         <img class="img img-responsive" style="height: 80px; float: right !important;" src="/smart_travel_agency/static/img/v.gif"/>
                                     </div>
                                 </div>
