--- a/views/menu_item.xml
+++ b/views/menu_item.xml
@@ -10,7 +10,7 @@
                   groups="smart_travel_agency.branch_group,smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group"
         />
           <menuitem id="rates_edit" name="Currency" parent="travel_policy_view_menu2"
-                  action="base.act_view_currency_rates" />
+                  action="base.action_currency_form" />
         <menuitem id="travel_policy_view_menu" name="Travel Policy" parent="travel_policy_view"
                   action="travel_policy_action" sequence="0"/>
         <menuitem id="insured_traveler_view_menu" name="Insured Travelers" parent="travel_policy_view"
