--- a/views/ticket.xml
+++ b/views/ticket.xml
@@ -1,19 +1,21 @@
 <odoo>
-     <record id="help_desk_inherit" model="ir.ui.view">
+    <record id="help_desk_inherit_travel_quoate" model="ir.ui.view">
         <field name="name">Help Disk</field>
-        <field name="model">helpdesk_lite.ticket</field>
-        <field name="inherit_id" ref="helpdesk_lite.helpdesk_ticket_form_view"/>
+        <field name="model">quoate</field>
+        <field name="inherit_id" ref="helpdesk_inherit.help_desk_quoate"/>
         <field name="arch" type="xml">
-             <xpath expr="//page[1]" position="after">
-                 <page string="Groups" attrs="{'invisible': [('ticket_type', '!=','travel')]}">
-                     <field name="group">
-                         <tree>
-                             <field name="range"/>
-                             <field name="size"/>
-                         </tree>
-                     </field>
-                 </page>
-             </xpath>
+            <xpath expr="/form" position="inside">
+                <notebook>
+                <page string="Groups" attrs="{'invisible': [('ticket_type', '!=','travel')]}">
+                    <field name="group">
+                        <tree>
+                            <field name="range"/>
+                            <field name="size"/>
+                        </tree>
+                    </field>
+                </page>
+                </notebook>
+            </xpath>
 
         </field>
     </record>
