--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -505,26 +505,26 @@
                 </t>
             </t>
         </template>
-           <report id="travel_xml_report"
-           string="travel_xml_report"
-           model="policy.travel"
-           report_type="qweb-xml"
-           name="smart_travel_agency.report_travel_docs"/>
-        <template id="report_travel_docs">
+<!--           <report id="travel_xml_report"-->
+<!--           string="travel_xml_report"-->
+<!--           model="policy.travel"-->
+<!--           report_type="qweb-xml"-->
+<!--           name="smart_travel_agency.report_travel_docs"/>-->
+<!--        <template id="report_travel_docs">-->
 
-                <t t-foreach="docs" t-as="o">
-       <MAINHEADER>
-           <POLICY >
-                   <IssueDate t-esc="o.issue_date"/>
+<!--                <t t-foreach="docs" t-as="o">-->
+<!--       <MAINHEADER>-->
+<!--           <POLICY >-->
+<!--                   <IssueDate t-esc="o.issue_date"/>-->
 
-           </POLICY>
-<!--           <SALEDETAILS t-foreach="dat" t-as="sales">-->
-<!--               <NUMBER t-esc="sales['sale_sequence']"/>-->
-<!--               <AMOUNT t-esc="sales['total_amount']"/>-->
-<!--               <SALESPERSON t-esc="sales['sales_person_name']"/>-->
-<!--           </SALEDETAILS>-->
-       </MAINHEADER>
-             </t>
-   </template>
+<!--           </POLICY>-->
+<!--&lt;!&ndash;           <SALEDETAILS t-foreach="dat" t-as="sales">&ndash;&gt;-->
+<!--&lt;!&ndash;               <NUMBER t-esc="sales['sale_sequence']"/>&ndash;&gt;-->
+<!--&lt;!&ndash;               <AMOUNT t-esc="sales['total_amount']"/>&ndash;&gt;-->
+<!--&lt;!&ndash;               <SALESPERSON t-esc="sales['sales_person_name']"/>&ndash;&gt;-->
+<!--&lt;!&ndash;           </SALEDETAILS>&ndash;&gt;-->
+<!--       </MAINHEADER>-->
+<!--             </t>-->
+<!--   </template>-->
     </data>
 </odoo>
