--- a/views/travel_policy.xml
+++ b/views/travel_policy.xml
@@ -378,7 +378,7 @@
     <record id="sequence_orders" model="ir.sequence">
         <field name="name">Order</field>
         <field name="code">order</field>
-        <field name="prefix">ORDER</field>
+        <field name="prefix">ORDER_</field>
         <field name="padding">6</field>
 <!--        <field name="number_next">1</field>-->
 <!--        <field name="number_increment">1</field>-->
